--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-Flask==3.1.0
-Jinja2==3.1.6
-Werkzeug==3.1.3
-itsdangerous==2.2.0
-click==8.1.8
-beautifulsoup4==4.13.3
-soupsieve==2.6
-requests==2.32.3
-urllib3==2.3.0
-idna==3.10
-certifi==2025.1.31
-charset-normalizer==3.4.1
-pandas==2.2.3
-numpy==2.2.4
-python-dateutil==2.9.0.post0
-pytz==2025.2
-tzdata==2025.2
-openpyxl==3.1.5
-colorama==0.4.6
-packaging==24.2
-typing_extensions==4.13.0
+Flask
 gunicorn
+flask_sqlalchemy
+pandas
+requests
+openpyxl
+beautifulsoup4
